# Legit-Wallet-Stealer

./: .env.example  .gitignore  Farmer.py  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  wallet_checker.ipynb  wallet_stealer.ipynb
colab/: wallet_checker.ipynb
src/: __init__.py  config.py  ethereum_service.py  system_service.py  telegram_notifier.py  telegram_service.py  wallet_checker.py  wallet_manager.py
src/core/: blockchain_manager.py  wallet_manager.py
src/services/: telegram_service.py
src/utils/: gpu_utils.py  logger.py
